--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>My AngularJS App</title>
+  <base href="/app/">
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
@@ -15,25 +16,30 @@
   <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
 <body>
-  <ul class="menu">
-    <li><a href="#/view1">view1</a></li>
-    <li><a href="#/view2">view2</a></li>
-    <li><a href="#/shows">shows</a></li>
-  </ul>
 
   <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
-
+  <ul class="menu">
+    <li><a ui-sref="state1">Route 1</a></li>
+    <li><a ui-sref="state2">Route 2</a></li>
+  </ul>
   <div ng-view></div>
+  <div ui-view>
+
+  </div>
 
   <div>Angular seed app: v<span app-version></span></div>
-
+  {{ "lower cap string" | uppercase }}
+  {{ {foo: "bar", baz: 23} | json }}
+  {{ 1304375948024 | date }}
+  {{ 1304375948024 | date:"MM/dd/yyyy @ h:mma" }}
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
   -->
 
   <script src="bower_components/angular/angular.js"></script>
+  <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="app.js"></script>
   <script src="view1/view1.js"></script>
