events shown now

--- a/app/index.html
+++ b/app/index.html
@@ -23,6 +23,7 @@
   <ul class="menu">
     <li><a ui-sref="state1">Route 1</a></li>
     <li><a ui-sref="state2">Route 2</a></li>
+    <li><a ui-sref="state3">Shows</a></li>
   </ul>
   <div ng-view></div>
   <div ui-view>
